[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://project/main_scene.gd" id="1_main"]
[ext_resource type="Script" path="res://addons/scene_system/dialogue_scene_loader.gd" id="2_loader"]

[node name="MainScene" type="Node"]
script = ExtResource("1_main")

[node name="DialogueSceneLoader" type="Node" parent="."]
script = ExtResource("2_loader")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogueBox" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="UI/DialogueBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="UI/DialogueBox/MarginContainer"]
layout_mode = 2

[node name="SpeakerLabel" type="Label" parent="UI/DialogueBox/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.878431, 0.4, 1)
text = "화자"

[node name="DialogueText" type="Label" parent="UI/DialogueBox/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "대화 내용이 여기에 표시됩니다."
autowrap_mode = true

[node name="ChoiceContainer" type="VBoxContainer" parent="UI/DialogueBox/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="ChoiceLabel" type="Label" parent="UI/DialogueBox/MarginContainer/VBoxContainer/ChoiceContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
text = "선택지"

[node name="Options" type="VBoxContainer" parent="UI/DialogueBox/MarginContainer/VBoxContainer/ChoiceContainer"]
layout_mode = 2